--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@elastic/ecs-morgan-format": "^1.1.0",
     "@loopback/boot": "^2.3.1",
     "@loopback/context": "^3.8.1",
     "@loopback/core": "^2.7.0",
@@ -55,15 +56,17 @@
     "@loopback/rest-explorer": "^2.2.2",
     "@loopback/service-proxy": "^2.3.0",
     "loopback-connector-oracle": "^4.5.2",
+    "morgan": "^1.10.0",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@loopback/build": "^5.4.1",
-    "source-map-support": "^0.5.19",
-    "@loopback/testlab": "^3.1.5",
-    "@types/node": "^10.17.24",
     "@loopback/eslint-config": "^7.0.1",
+    "@loopback/testlab": "^3.1.5",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^10.17.24",
     "eslint": "^7.0.0",
+    "source-map-support": "^0.5.19",
     "typescript": "~3.9.3"
   }
 }
